# planB

./: .gitignore  car.py  main.py  pyproject.toml
nn/: __init__.py  losses.py  network.py  normalizators.py
nn/genetic/: __init__.py  pickers.py  pool.py
nn/layers/: __init__.py  activators.py  base.py  dense.py
