[tool.poetry]
name = "asd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.22.3"
jsonpickle = "^2.1.0"
typing-extensions = "^4.1.1"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pyinstaller = "^4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
